# owen_proto

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Readme.txt  TODO.ru
devs/: TPM200.json
include/: owen.h  seri.h
proto/: .gitignore  CMakeLists.txt  Readme.txt
proto/devs/: TPM200.json
proto/test/118_datalink/: main.c
proto/test/119_presentation/: main.c
proto/test/120_user/: main.c
proto/text/: owen_datalink.c  owen_phy.c  owen_utils.c  seri.c
serial/: CMakeLists.txt  Makefile
serial/include/: owen.h
serial/test/118_datalink/: main.c
serial/test/119_presentation/: main.c
serial/test/121_phy/: main.c
serial/text/: main.c  owen_datalink.c  owen_present.c
test/118_datalink/: Makefile
test/121_phy/: main.c
